<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Mova</string>
    <string name="voteAverage" translatable="false">%1$s (%2$s)</string>
    <string name="release_date_genre" translatable="false">%1$s  %2$s</string>
    <string name="internet_error">"Oops! Please check your internet connection."</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong. Please try again.</string>
    <string name="cancel">Cancel</string>
    <string name="movie">Movie</string>
    <string name="tv_series">Tv Series</string>
    <string name="tv">Tv</string>
    <string name="movies">Movies</string>
    <string name="navigate_up">Navigate up</string>
    <string name="director">Director</string>
    <string name="share">Share</string>
    <string name="favorite_list">Favorite List</string>
    <string name="watchList">Watch List</string>
    <string name="detail_bottom_sheet_movie_info">Details and More</string>
    <string name="detail_bottom_sheet_tv_info">Episodes and More</string>
    <string name="add_favorite_list">Add My Favorite List</string>
    <string name="add_watch_list">Add My Watch List</string>
    <string name="sign_in">Sign In</string>
    <string name="must_login_able_to_add_in_list"> You must to login to able to add in list</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="see_all">See all</string>
</resources>