<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/filter_bottom_sheet_back"
    android:padding="@dimen/medium_padding">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_margin="@dimen/medium_margin"
        app:cardCornerRadius="@dimen/shape_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvName">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            tools:src="@drawable/avatar" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvName"
        style="@style/Mova.H5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:ellipsize="end"
        android:lines="2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/ibClose"
        tools:text="Avatar" />

    <TextView
        android:id="@+id/tvReleaseDate"
        style="@style/Mova.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_margin"
        android:textColor="@color/subtitleColor"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:text="2009" />


    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:paddingTop="@dimen/medium_padding"
        android:scrollbars="vertical"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvReleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate"
        app:layout_constraintVertical_bias="0.187"
        tools:text="Bir hırsızlık olayında ağabeyi ölen yarı felçli Jake Sully, Pandora adındaki uzak bir gezegende görevinin başına geçmeye karar verir. Bu yerde Na’vi adında giderek tükenmekte olan bir halk yaşamaktadır. Askeri bir şirket, söz konusu yeri ve oradaki kaynakları mercek altına almak üzere Avatar adında bir program oluşturmuştur. Bu program insanları kısmen insan kısmen de Na’vi haline büründürerek misyon amaçlı Pandora’ya göndermektedir. Bu sisteme gönüllü dahil olan Botanist Dr. Grace Augustine ve Jake Sully için başka bir yaşam var olacaktır. Sully, Pandora’ya geçtiği anda felçli bedeni değişime uğrayarak işlevsel hale gelir. Bu sırada Na’vi halkından Prenses Neytiri ile karşı karşıya gelen Jake, ansızın bir farkındalık yaşar ve bir araştırma misyonu ile gönderildiği bu gezegeni, kendi dünyalısından korumaya karar verir." />


    <ImageButton
        android:id="@+id/ibClose"
        style="@style/CircleImageLargeButton"
        android:layout_margin="@dimen/medium_margin"
        android:contentDescription="@string/navigate_up"
        android:padding="@dimen/small_padding"
        android:src="@drawable/ic_close_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--region share,favorite,watch btn section-->
    <ImageButton
        android:id="@+id/btnFavoriteList"
        style="@style/CircleImageLargeButton"
        android:layout_marginTop="@dimen/medium_margin"
        android:contentDescription="@string/add_favorite_list"
        android:paddingTop="2dp"
        android:src="@drawable/ic_favorite_border_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibShare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/favorite_list"
        app:layout_constraintEnd_toEndOf="@+id/btnFavoriteList"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/btnFavoriteList"
        app:layout_constraintTop_toBottomOf="@+id/btnFavoriteList" />


    <ImageButton
        android:id="@+id/ibShare"
        style="@style/CircleImageLargeButton"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share_white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnFavoriteList"
        app:layout_constraintEnd_toStartOf="@+id/btnWatchingList"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFavoriteList"
        app:layout_constraintTop_toTopOf="@+id/btnFavoriteList"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="@+id/ibShare"
        app:layout_constraintStart_toStartOf="@+id/ibShare"
        app:layout_constraintTop_toBottomOf="@+id/ibShare" />

    <ImageButton
        android:id="@+id/btnWatchingList"
        style="@style/CircleImageLargeButton"
        android:contentDescription="@string/add_watch_list"
        android:padding="@dimen/small_padding"
        android:src="@drawable/outline_video_library_24"
        app:layout_constraintBottom_toBottomOf="@+id/btnFavoriteList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibShare"
        app:layout_constraintTop_toTopOf="@+id/btnFavoriteList" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/watchList"
        app:layout_constraintEnd_toEndOf="@+id/btnWatchingList"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/btnWatchingList"
        app:layout_constraintTop_toBottomOf="@+id/btnWatchingList" />

    <!--endregion share,favorite,watch btn section-->

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/detailSection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iconSizeLarge"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/bottom_sheet_detail_and_more_button_ripple"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider3">

        <ImageView
            android:layout_width="@dimen/iconSizeMedium"
            android:layout_height="@dimen/iconSizeMedium"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_outline_info_white"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/tvBottomInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_weight="8"
            android:textColor="?attr/colorOnSurface"
            tools:text="Ayrıntılar ve Daha Fazlası" />

        <ImageView
            android:layout_width="@dimen/iconSizeMedium"
            android:layout_height="@dimen/iconSizeMedium"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_keyboard_arrow_right_white"
            app:tint="?attr/colorOnSurface" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="62dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="209dp" />

</androidx.constraintlayout.widget.ConstraintLayout>